--- a/exercice1.html
+++ b/exercice1.html
@@ -21,7 +21,7 @@
         <li>Hooved feet</li>
     </ul>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="exercice1.js">
 </script>
 </body>
